# onnxruntime

./: .Net_CLI  .build_settings.json  .buildinfo  .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .flake10  .flake8  .gitattributes  .gitignore  .gitmodules  .ignore  .lfsconfig  .lintrunner.toml  .pydocstyle  .sscignore  0001-Added-guards-for-kleidi-specific-dyn-qgemm-call-site.patch  0001-Change-the-path-of-install_onnx.sh.patch  0001-torch_onnx_globals_module.patch  187.txt  203.txt  404.html  =0.9.0  AGENTS.md  API-Execution-Provider.go  Authors.go  BUILD.md  Build2023.html  CITATION.cff  CMakeLists.txt  CNAME  CODEOWNERS  CONTRIBUTING.md  CPPLINT.cfg  Cake  Code-Coverage-Review.Net  CodeQL.yml  Copyright.go  (+256 more)
SimplifiedCustomOpDemo/: CMakeLists.txt  fuse_select_filter.cc  fuse_select_filter.def  fusion_filter.onnx  fusion_filter_2.onnx  legacy.cc  main.cc  merge.cc  merge.def  new.cc  optional.cc  optional.def  simple_custom_op.cc  simple_custom_op.def  str_merge.onnx  varied.cc
cmake/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CheckAtomic.cmake  ConfigureVisualStudioCodeAnalysis.props  EnableVisualStudioCodeAnalysis.props  Info.plist.in  Sdl.ruleset  adjust_global_compile_flags.cmake  arm64x.cmake  codeconv.runsettings  deps.txt  deps_update_and_upload.py  detect_onnxruntime_target_platform.cmake  embed.py  empty.c  find_snpe.cmake  flake8.cmake  gdk_toolchain.cmake  get_boost.cmake  handle_duplicate_object_files.py  hip_fatbin_insert  install.cmake  libonnxruntime.pc.cmake.in  linux_arm32_crosscompile_toolchain.cmake  linux_arm64_crosscompile_toolchain.cmake  maccatalyst_prepare_objects_for_prelink.py  my_ep.cmake  node_helper.cmake  nuget_helpers.cmake  onnxruntime-build.cmake  onnxruntime.cmake  onnxruntime.rc  onnxruntime_1ds_telemetry.cmake  onnxruntime_automl.cmake  onnxruntime_automl_featurizers.cmake  onnxruntime_avx512_checker.cmake  onnxruntime_codegen.cmake  onnxruntime_codegen_tvm.cmake  onnxruntime_common.cmake  (+127 more)
cmake/horovod/: CMakeLists.txt
cmake/onnx/: CMakeLists.txt
cmake/patches/: gsl.patch
cmake/tensorboard/: CMakeLists.txt
cmake/utils/: detect_cuda_arch.cu
cmake/vcpkg-triplets/: arm64-osx.cmake  arm64-windows.cmake  gen.py  x64-osx.cmake  x64-windows.cmake
cmake/vcpkg_triplets/: gen.py
cmake/xnnpack/: CMakeLists.txt
js/node/: .gitignore  .npmignore  CMakeLists.txt  README.md  op_test_generated_model_abs_fixed.onnx  op_test_generated_model_abs_no_shape.onnx  op_test_generated_model_abs_symbol.onnx  package-lock.json  package.json  t.cjs  test.js  tsconfig.json
model_package/: CMakeLists.txt  README.md
model_package/include/: model_package.h  model_package_api.h  ort_json.h
model_package/src/: api.cc  asset_hasher.cc  asset_hasher.h  authoring.cc  commit_prune_validate.cc  commit_vacuum_validate.cc  manifest_parser.cc  manifest_parser.h  model_package_impl.cc  model_package_impl.h  model_package_internal.h  ort_json.cc  parser.cc  parser.h  path_resolver.cc  path_resolver.h  sha256.cc  sha256.h  status_impl.h
model_package/tests/: test_asset_hashing.cc  test_authoring.cc  test_commit.cc  test_inspection.cc  test_ort_json.cc
nodejs/: .eslintrc.js  BUILD.md  CMakeLists.txt  README.md  package-lock.json  package.json
nodejs/examples/: .gitignore  README.md
nodejs/lib/: binding.ts  index.ts  inference-session-impl.ts  inference-session.ts  onnx-value.ts  tensor-impl.ts  tensor.ts
nodejs/script/: build.ts  pack-prebuild.ts
nodejs/src/: .clang-format  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  common.h  inference_session_wrap.cc  inference_session_wrap.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  package-lock.json  package.json  run_options_helper.cc  run_options_helper.h  session_options_helper.cc  session_options_helper.h  tensor_helper.cc  tensor_helper.h  tsconfig.json
nodejs/test/: test-runner.ts  test-utils.ts
onnxruntime/core/: CMakeLists.txt
onnxruntime/wasm/: .gitignore  CMakeLists.txt  README.md  api.cc  api.h  example.cc  example.h  example.html  example.js  example_native.cc  example_native.h  example_wasm.cc  example_wasm.h  inference_api.h  js_external_data_loader.cc  js_external_data_loader.h  js_internal_api.js  js_post_js.js  js_post_js_64.js  model.onnx  model.ort  post-webgpu.js  post-webnn.js  pre-async.js  pre-jsep.js  pre.js  reduced_types.config  required_operators.config  training_api.cc  training_api.h  utils.cc  wasm_post_build.js
plugin-ep-webgpu/python/: README.md  build_wheel.py  pyproject.toml  pyproject.toml.in  requirements-build-wheel.txt  setup.py
plugin_execution_providers/tensorrt/: CMakeLists.txt  ep_abi_utils.cc  ep_abi_utils.h  nv_includes.h  onnx_ctx_model_helper.ccc  onnx_ctx_model_helper.h  ort_trt_int8_cal_table.fbs.h  tensorrt_cuda_allocator.h  tensorrt_execution_provider.cc  tensorrt_execution_provider.h  tensorrt_execution_provider_utils.h  tensorrt_provider_factory.cc  tensorrt_provider_factory.h
rust/onnxruntime/: Cargo.toml
rust/onnxruntime-sys/: .cargo.config  Cargo.toml  build.rs  wrapper.h
rust/pykeio_ort/: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
samples/GenericInterface/: CMakeLists.txt  test.cpp
samples/c_cxx/: CMakeLists.txt  README.md
samples/c_test/: CMakeLists.txt  Relu.onnx  sanityTests.sh  test.cpp
samples/customEP/: CMakeLists.txt  custom_allocator.cc  custom_allocator.h  custom_data_transfer.cc  custom_data_transfer.h  custom_ep.cc  custom_ep.h  custom_ep_factory.cc  custom_ep_factory.h
samples/customEP2/: CMakeLists.txt  custom_ep2.cc  custom_ep2.h
samples/custom_op_thresholded_relu/: CMakeLists.txt  ISSUE_ANALYSIS.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  create_fixed_original.py  create_model.py  fixed_original.cpp  fixed_original.h  fixed_original_test.cpp  test_thresholded_relu.cpp  thresholded_relu_op.cpp  (+1 more)
server/: CMakeLists.txt  converter.cc  converter.h  environment.cc  environment.h  executor.cc  executor.h  get_boost.cmake  main.cc  protobuf_function.cmake  server_configuration.h  util.cc  util.h
(+34350 files in other folders)
