cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 17)
project(simple_custom_op CXX)
add_library (simple_custom_op SHARED simple_custom_op.cc simple_custom_op.def)
target_include_directories(simple_custom_op PRIVATE ../include/onnxruntime/core/session)
add_executable(main main.cc)
target_include_directories(main PRIVATE ../include/onnxruntime/core/session)
target_link_directories(main PRIVATE ../build/Windows/Debug/Debug/ ../build/Linux/RelWithDebInfo/)
target_link_libraries(main PRIVATE onnxruntime)